Use a static site generator to split out HTML

--- a/package.json
+++ b/package.json
@@ -4,19 +4,27 @@
   "description": "CardboardIoT website",
   "main": "index.js",
   "scripts": {
-    "deploy": "surge -p static/",
-    "build": "npm run build:css",
+    "deploy": "surge -p build/",
+    "build": "npm-run-all build:css build:site",
+    "build:site": "node build.js",
     "build:css": "postcss --config ./postcss-config.json --output static/site.css css/main.css",
-    "watch": "npm run watch:css",
+    "watch": "npm-run-all --parallel watch:site watch:css",
+    "watch:site": "WATCH_FILES=true node build.js",
     "watch:css": "postcss --watch --config ./postcss-config.json --output static/site.css css/main.css",
-    "serve": "puer --dir static/",
-    "dev": "npm-run-all --parallel wtach serve",
+    "serve": "puer --dir build/",
+    "dev": "npm-run-all --parallel serve watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "dependencies": {},
   "devDependencies": {
     "autoprefixer": "^6.0.3",
+    "metalsmith": "^2.1.0",
+    "metalsmith-assets": "^0.1.0",
+    "metalsmith-in-place": "^1.3.2",
+    "metalsmith-layouts": "^1.4.2",
+    "metalsmith-markdown": "^0.2.1",
+    "metalsmith-watch": "^1.0.1",
     "normalize.css": "^3.0.3",
     "npm-run-all": "^1.2.13",
     "postcss-cli": "^2.3.2",
