--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "author": "",
   "dependencies": {
-    "normalize-opentype.css": "^0.2.4"
+    "normalize-opentype.css": "^0.2.4",
+    "postcss-media-minmax": "^2.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.0.3",
