--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "CardboardIoT website",
   "main": "index.js",
   "scripts": {
-    "deploy": "surge -p build/",
+    "deploy:staging": "surge --project build/ --domain cardboardiot.surge.sh",
+    "deploy:production": "surge --project build/",
     "build": "npm-run-all build:css build:site",
     "build:site": "node build.js",
     "build:css": "postcss --config ./postcss-config.json --output static/site.css css/main.css",
